--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,9 +1,8 @@
 @import 'normalize.css';
 // import font family
-// @import url()
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 :root {
-    --primary: red;
+    --primary: yellow;
 }
 
 * {
