add notfound page

--- a/src/components/Layout/DefaultLayout/Footer/Footer.scss
+++ b/src/components/Layout/DefaultLayout/Footer/Footer.scss
@@ -40,6 +40,13 @@ footer {
                     font-size: 1.6rem;
                 }
             }
+            .searchInput {
+                padding: 4px 8px;
+            }
+            .searchbtn {
+                background-color: #fff;
+                height: 100%;
+            }
         }
         &-logo {
             color: #fff;
