--- a/src/components/Home/Category/category.scss
+++ b/src/components/Home/Category/category.scss
@@ -3,6 +3,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    &_booklist {
+        width: 100%;
+        height: 800px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-content: space-between;
+        margin: 20px 0;
+    }
     &_info {
         margin-top: 20px;
     }
