--- a/src/components/Home/NicePosts/niceposts.scss
+++ b/src/components/Home/NicePosts/niceposts.scss
@@ -3,4 +3,14 @@
     flex-direction: column;
     align-items: center;
     margin: 5rem 0;
+    &_postlist {
+        margin: 20px 0;
+        height: 700px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    &-paginate {
+        font-size: 20px !important;
+    }
 }
