--- a/src/components/Home/TopReader/topreader.scss
+++ b/src/components/Home/TopReader/topreader.scss
@@ -10,7 +10,7 @@
         // width: 100%;
         padding: 0 5rem;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: flex-end;
 
         &-trophy {
