--- a/src/pages/Category/category.scss
+++ b/src/pages/Category/category.scss
@@ -18,4 +18,13 @@
             color: #fff;
         }
     }
+    &_list {
+        width: 100%;
+        height: 1200px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-content: space-between;
+        margin: 40px 0 20px 0;
+    }
 }
