--- a/src/components/Layout/DefaultLayout/Header/Header.scss
+++ b/src/components/Layout/DefaultLayout/Header/Header.scss
@@ -1,5 +1,6 @@
 header {
     width: 100%;
+
     .header1 {
         a {
             color: #fff;
@@ -91,12 +92,18 @@ header {
         }
     }
     .header3 {
+        margin-top: 10rem;
         display: flex;
         justify-content: space-between;
         padding: 0.5rem 20rem;
         border-bottom: 0.1rem solid rgba(0, 0, 0, 0.212);
         span {
             margin-left: 1rem;
+        }
+        .header3-authlink {
+            &:hover {
+                opacity: 0.6;
+            }
         }
     }
 }
