--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -22,6 +22,13 @@ body {
     text-rendering: optimizeSpeed;
 }
 
+// hide scrollbar
+::-webkit-scrollbar {
+    display: none;
+}
+#element::-webkit-scrollbar {
+    display: none;
+}
 a {
     text-decoration: none;
 }
