--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -1,20 +1,25 @@
-.header1 {
-    a {
-        color: #fff;
-        &:hover {
-            color: var(--primary);
-        }
-    }
-    color: #fff;
-    background-color: black;
+.login {
+    width: 50rem;
+    height: 95vh;
+    margin: auto;
     display: flex;
-    justify-content: space-between;
-    padding: 0 20rem;
-    font-size: 2rem;
-    &-icons {
-        width: 10rem;
+    justify-content: center;
+    align-items: center;
+    &_content {
+        margin: auto;
+        background-color: #fff;
+        border-radius: 8px;
         display: flex;
-        justify-content: space-between;
-        align-items: center;
+        width: 50rem;
+        height: 50rem;
+        flex-direction: column;
+        justify-content: center;
+        padding: 2rem 1rem;
+        .login-button {
+            background-color: #e8aa30;
+            &:hover {
+                background-color: #ca9222;
+            }
+        }
     }
 }
