--- a/src/pages/ResetPassword/reset_password.scss
+++ b/src/pages/ResetPassword/reset_password.scss
@@ -1,4 +1,4 @@
-.forgetpw {
+.resetpw {
     width: 50rem;
     height: 95vh;
     margin: auto;
@@ -15,7 +15,7 @@
         flex-direction: column;
         justify-content: center;
         padding: 2rem 1rem;
-        .forgetpw-button {
+        .resetpw-button {
             background-color: #e8aa30;
             &:hover {
                 background-color: #ca9222;
