--- a/src/components/Home/TopReader/topreader.scss
+++ b/src/components/Home/TopReader/topreader.scss
@@ -2,13 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 5rem 0;
+    margin: 50px 0;
     &_text {
-        margin-bottom: 2rem;
+        margin-bottom: 20px;
     }
     &_trophies {
         // width: 100%;
-        padding: 0 5rem;
+        padding: 0 50px;
         display: flex;
         justify-content: space-evenly;
         align-items: flex-end;
@@ -16,32 +16,32 @@
         &-trophy {
             width: 20%;
             img {
-                padding: 0 2.4rem;
+                padding: 0 24px;
             }
             &-name {
                 width: 100%;
 
-                margin-top: 2rem;
+                margin-top: 20px;
             }
         }
     }
     &_myrank {
-        margin-top: 2.5rem;
+        margin-top: 25px;
 
         &-mine {
             display: flex;
-            width: 20rem;
+            width: 200px;
             justify-content: space-between;
-            margin-top: 2rem;
+            margin-top: 20px;
             &-rank {
-                padding: 0.4rem 1.6rem;
+                padding: 4px 16px;
                 background-color: #000;
                 color: #fff;
                 text-align: center;
-                border-radius: 0.5rem;
+                border-radius: 5px;
             }
             &-name {
-                width: 15rem;
+                width: 150px;
             }
         }
     }
