--- a/src/pages/NotFound/notfound.scss
+++ b/src/pages/NotFound/notfound.scss
@@ -7,14 +7,14 @@
         width: 60%;
     }
     &_title {
-        margin-top: 2rem;
-        font-size: 3rem;
+        margin-top: 20px;
+        font-size: 30px;
         font-weight: bolder;
     }
     &_text {
-        font-size: 2rem;
-        margin: 2rem;
-        width: 48rem;
+        font-size: 20px;
+        margin: 20px;
+        width: 480px;
         text-align: center;
     }
 }
