--- a/src/pages/ResetPassword/reset_password.scss
+++ b/src/pages/ResetPassword/reset_password.scss
@@ -1,5 +1,5 @@
 .resetpw {
-    width: 50rem;
+    width: 500px;
     height: 95vh;
     margin: auto;
     display: flex;
@@ -10,11 +10,11 @@
         background-color: #fff;
         border-radius: 8px;
         display: flex;
-        width: 50rem;
-        height: 50rem;
+        width: 500px;
+        height: 500px;
         flex-direction: column;
         justify-content: center;
-        padding: 2rem 1rem;
+        padding: 20px 10px;
         .resetpw-button {
             background-color: #e8aa30;
             &:hover {
