--- a/src/components/Home/NicePosts/niceposts.scss
+++ b/src/components/Home/NicePosts/niceposts.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 5rem 0;
+    margin: 50px 0;
     &_postlist {
         margin: 20px 0;
         height: 700px;
