--- a/src/components/Home/NiceVideos/nicevideos.scss
+++ b/src/components/Home/NiceVideos/nicevideos.scss
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 5rem 0;
+    margin: 50px 0;
     .home-title {
-        margin-bottom: 3rem;
+        margin-bottom: 30px;
     }
     .videos-row {
-        margin-top: 2rem;
+        margin-top: 20px;
         width: 100%;
         display: flex;
         justify-content: space-between;
@@ -16,6 +16,6 @@
         }
     }
     .home-box {
-        margin-top: 3rem;
+        margin-top: 30px;
     }
 }
