--- a/src/components/Layout/AuthLayout/Footer/Footer.scss
+++ b/src/components/Layout/AuthLayout/Footer/Footer.scss
@@ -7,6 +7,6 @@ footer {
         font-style: italic;
         color: rgba(255, 255, 255, 0.822);
         text-align: center;
-        padding: 0.5rem 0;
+        padding: 5px 0;
     }
 }
