--- a/src/components/Layout/AuthLayout/Header/Header.scss
+++ b/src/components/Layout/AuthLayout/Header/Header.scss
@@ -11,10 +11,10 @@ header {
         background-color: black;
         display: flex;
         justify-content: space-between;
-        padding: 0 20rem;
-        font-size: 2rem;
+        padding: 0 200px;
+        font-size: 20px;
         &-icons {
-            width: 10rem;
+            width: 100px;
             display: flex;
             justify-content: space-between;
             align-items: center;
