--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -1,17 +1,17 @@
 .home-title {
-    font-size: 2.2rem;
+    font-size: 22px;
     font-weight: bolder;
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 20px;
 }
 
 .home-box {
     background-color: #000;
     color: #fff;
     text-align: center;
-    border-radius: 0.5rem;
+    border-radius: 5px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    padding: 0.4rem 1.6rem;
+    padding: 4px 16px;
 }
