--- a/src/components/ReviewBook/Comment_bookv2/comment.css
+++ b/src/components/ReviewBook/Comment_bookv2/comment.css
@@ -1,6 +1,5 @@
 .comments {
-    margin-top: 20px;
-    padding:0 20rem;
+    margin-top: 5rem;
   }
   
   .comments-title {
@@ -70,7 +69,7 @@
   .comment-author {
     margin-right: 8px;
     font-size: 20px;
-    color: rgb(59, 130, 246);
+    color: black; 
   }
   
   .comment-text {
