--- a/src/pages/ReviewBook/review_book.scss
+++ b/src/pages/ReviewBook/review_book.scss
@@ -28,8 +28,18 @@
             justify-content: space-between;
             &-read {
                 width: 30%;
-                border-radius: 10px;
+                border-radius: 5px;
                 background-color: greenyellow;
+                text-align: center;
+                border: 1px solid black;
+                color: black;
+                border-width: 2px;
+                border-style: outset;
+                border-color: buttonborder;
+                &-link{
+                    width: 100%;
+                    height: 100%;
+                }
                 &:hover {
                     background-color: rgb(94, 149, 12);
                 }
