--- a/src/pages/Category/category.scss
+++ b/src/pages/Category/category.scss
@@ -3,6 +3,7 @@
         width: 90%;
         display: flex;
         justify-content: space-between;
+        padding-bottom: 3rem;
         &-item {
             width: 22%;
             border: 1px solid #000;
