--- a/src/components/Layout/DefaultLayout/Header/Header.scss
+++ b/src/components/Layout/DefaultLayout/Header/Header.scss
@@ -1,6 +1,5 @@
 header {
     width: 100%;
-
     .header1 {
         a {
             color: #fff;
@@ -31,18 +30,15 @@ header {
         a {
             color: #6f6f6f;
         }
-
         &-logo {
             img {
                 width: 60px;
             }
         }
-
         &-navbar {
             ul {
                 list-style: none;
                 display: flex;
-
                 .active {
                     color: #000;
                     span::after {
@@ -51,10 +47,8 @@ header {
                     }
                     color: #000;
                 }
-
                 li {
                     padding: 5px 15px;
-
                     &:hover {
                         span::after {
                             width: 100%;
@@ -65,7 +59,6 @@ header {
                     span {
                         position: relative;
                         font-weight: bold;
-
                         &::after {
                             transition: all 0.3s ease;
                             content: '';
@@ -105,4 +98,49 @@ header {
             }
         }
     }
+}
+
+.header3-account {
+    position: relative;
+}
+
+.header3-account::after {
+    content: "";
+    position: absolute;
+    width: 5rem;
+    height: 5px;
+    top: 120%;
+    right: 0rem;
+    background-color: white;
+    opacity: 0;
+}
+
+.manageAccount {
+    position: absolute;
+    top: 2rem;
+    background-color: rgba(0, 0, 0, 0.212);
+    padding: 5px 10px;
+    border-radius: 3px;
+    width: 8rem;
+    display: none;
+    z-index: 1000000;
+}
+
+.manageAccount .log-out {}
+
+.manageAccount .log-out div {
+    color: black;
+}
+
+.manageAccount .log-out div {
+    padding: 0 10px;
+}
+
+.header3-account:hover .manageAccount {
+    display: block;
+}
+
+.header3-account:hover .manageAccount .log-out li {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
 }
