--- a/src/pages/ReviewBook/review_book.scss
+++ b/src/pages/ReviewBook/review_book.scss
@@ -13,7 +13,9 @@
     margin-top: 2.5rem;
     display: flex;
     &-img {
+        width: 25rem;
         margin-right: 2rem;
+        object-fit: contain;
     }
     &-detail {
         margin-left: 2.5rem;
@@ -25,6 +27,7 @@
         &-option {
             margin-top: 2rem;
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-between;
             &-read {
                 width: 30%;
@@ -36,7 +39,7 @@
                 border-width: 2px;
                 border-style: outset;
                 border-color: buttonborder;
-                &-link{
+                &-link {
                     width: 100%;
                     height: 100%;
                 }
@@ -46,10 +49,23 @@
             }
             &-add {
                 width: 60%;
+                text-align: center;
                 border-radius: 10px;
                 background-color: yellow;
                 &:hover {
                     background-color: rgb(198, 198, 24);
+                }
+            }
+            &-listen {
+                margin-top: 0.9rem;
+                width: 50%;
+                border-radius: 10px;
+                color: black;
+                text-align: center;
+                background-color: rgb(219, 108, 108);
+                &:hover {
+                    background-color: rgb(196, 56, 56);
+                    ;
                 }
             }
         }
