--- a/src/components/Layout/DefaultLayout/Header/Header.scss
+++ b/src/components/Layout/DefaultLayout/Header/Header.scss
@@ -88,7 +88,7 @@ header {
         display: flex;
         justify-content: space-between;
         padding: 5px 200px;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.212);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.45);
         span {
             margin-left: 10px;
         }
@@ -107,7 +107,7 @@ header {
 .header3-account::after {
     content: "";
     position: absolute;
-    width: 5rem;
+    width: 100%;
     height: 5px;
     top: 120%;
     right: 0rem;
@@ -119,22 +119,30 @@ header {
     position: absolute;
     top: 2rem;
     background-color: rgba(0, 0, 0, 0.212);
-    padding: 5px 10px;
     border-radius: 3px;
-    width: 8rem;
+    width: 11rem;
     display: none;
     z-index: 1000000;
 }
 
-.manageAccount .log-out {}
+.manageAccount>.log-out:last-child div{
+    border: none !important;
+}
 
-.manageAccount .log-out div {
+.manageAccount>.log-out>div {
     color: black;
+    &:hover{
+        background-color: #272222;
+        color: #fff
+    }
 }
 
 .manageAccount .log-out div {
-    padding: 0 10px;
+    padding: 10px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.233);
 }
+
+
 
 .header3-account:hover .manageAccount {
     display: block;
