--- a/src/components/Home/NicePosts/niceposts.scss
+++ b/src/components/Home/NicePosts/niceposts.scss
@@ -5,7 +5,7 @@
     margin: 50px 0;
     &_postlist {
         margin: 20px 0;
-        height: 700px;
+        height: 700px !important;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
