--- a/src/pages/AudioBook/audioBook.scss
+++ b/src/pages/AudioBook/audioBook.scss
@@ -1,9 +1,13 @@
 .container-audio {
-    margin-bottom: 10rem;
+    margin-top: 50px;
+    margin-bottom: 120px;
 }
 
 .container-audio .title-book {
-    margin-left: 4rem;
+    // margin-left: 4rem;
+    // margin-bottom: 20px;
+    // font-size: 20px;
+    font-weight: bold;
 }
 
 .content-audio {
@@ -11,9 +15,11 @@
 }
 
 .audio-image {
-    width: 50%;
+    max-width: 30%;
     overflow: hidden;
+    height: 31rem;
     margin-right: 1rem;
+    overflow: hidden;
 }
 
 .audio-image img {
@@ -26,15 +32,16 @@
     width: 100%;
     background-color: #d9d9d9;
     border-radius: 5px;
-    height: 10rem;
+    height: 20rem;
+    // overflow-y: scroll;
 }
 
 .audio-image-sub {
     display: flex;
     width: 100%;
     padding-left: 20px;
-    padding-top: 1rem;
-    margin-top: 1.2rem;
+    // padding-top: 1rem;
+    // margin-top: 0.5rem;
 }
 
 .audio-image-sub img {
@@ -54,7 +61,7 @@
     margin-bottom: 0.5rem;
     width: 100%;
     height: 3px;
-    background-color: black;
+    // background-color: black;
 }
 
 .listAudio {
@@ -64,6 +71,8 @@
     height: 20rem;
     overflow-y: scroll;
     padding: 10px 10px;
+    padding-left: 20px;
+    padding-top: 50px;
 }
 
 .listAudio ul {
